# ggj2023

./: CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml
code/: config.h.in  main.cc
code/bits/: AudioManager.cc  AudioManager.h  CommonScene.cc  CommonScene.h  DialogEntity.cc  DialogEntity.h  GameData.h  GameHub.cc  GameHub.h  GameOverEntity.cc  GameOverEntity.h  GameOverScene.cc  GameOverScene.h  GameState.cc  GameState.h  Hero.cc  Hero.h  HeroEntity.cc  HeroEntity.h  HeroHudEntity.cc  HeroHudEntity.h  HeroState.h  LiftEntity.cc  LiftEntity.h  LiftScene.cc  LiftScene.h  LightEntity.cc  LightEntity.h  MainScene.cc  MainScene.h  MapData.cc  MapData.h  MapEntity.cc  MapEntity.h  MapState.cc  MapState.h  RootEntity.cc  RootEntity.h  RootModel.cc  RootModel.h  (+13 more)
data/raw/: Scénario  Scénarion Root Company.odt  montage.sh  roots.sh  walls.sh
